--- a/lifefit_cliente/html/mostrar_ejercicios.html
+++ b/lifefit_cliente/html/mostrar_ejercicios.html
@@ -4,19 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercises | LifeFit</title>
-    <link rel="stylesheet" href="../style/ejercicios_style.css">
+    <title>Show exercise | LifeFit</title>
+    <link rel="stylesheet" href="../style/mostrar_ejercicios.css">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@100,400,0,0" />
-
 </head>
 
 <body>
@@ -31,27 +26,21 @@
                     <ul>
                         <li><a href="home.html">Home</a></li>
                         <li><a href="rutinas.html">My routines</a></li>
+                        <li><a class="btn btn-dark" id="close_session">Close Session</a></li>
                     </ul>
                 </nav>
             </div>
             <img src="../img/LIFEFIT-SIN-FONDO.png" alt="logo lifefit">
         </header>
-        <main id="main">
-            <div class="contenedor_flecha">
-                <a href="rutinas.html" class="enlace_flecha">
-                    <span class="material-symbols-outlined">arrow_back_ios</span>
-                </a>
-            </div>
-            <div class="rutina" id="rutina">
+        <main class="main">
+            <div class="mostrar_ejercicio" id="mostrar_ejercicio">
+
             </div>
         </main>
+
     </div>
-    <div class="ventana_borrosa" id="ventana_borrosa"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="../ejercicios_script.js"></script>
-
-</body>
-
-</html>
+    <script src="../mostrar_ejercicios.js"></script>
+    </body>
