--- a/lifefit_cliente/html/rutinas.html
+++ b/lifefit_cliente/html/rutinas.html
@@ -9,10 +9,8 @@
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-    <!-- Enlaza Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-    <!-- Enlaza Material Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -29,9 +27,9 @@
                 </div>
                 <nav class="menu_header">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Muscles</a></li>
+                        <li><a href="home.html">Home</a></li>
                         <li><a href="rutinas.html">My routines</a></li>
+                        <li><a class="btn btn-dark" id="close_session">Close Session</a></li>
                     </ul>
                 </nav>
             </div>
@@ -42,6 +40,11 @@
                 <input type="hidden" id="1">
                 <a id="abrir_modal" class="btn btn-primary">Create routine</a>
             </div>
+            <p class="sinRutinas" id="parrafo_sinRutinas">
+                You do not have any routines created <span
+                    class='material-symbols-outlined'>sentiment_dissatisfied</span> <span
+                    class='material-symbols-outlined'>fitness_center</span>
+            </p>
             <div class="contenedor_rutinas" id="contenedor_rutinas">
 
             </div>
@@ -58,22 +61,12 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-body">
+                            <input type="text" name="nombreEjercicios" id="nombreEjercicios"
+                                placeholder="Routine Name..." class="form-control">
                             <form id="formulario_rutina">
-                                <div class="form-group">
-                                    <label for="name">Name</label>
-                                    <input type="hidden" name="user_id" value="1" id="user_id">
-                                    <input type="text" class="form-control" name="name" id="name" placeholder="Name...">
-                                    <label for="Ejercicios">Exercises</label>
-                                    <input type="text" class="form-control" name="ejercicio[]"
-                                        placeholder="Exercise...">
-                                    <input type="number" class="form-control" name="serie[]" placeholder="Sets...">
-                                    <input type="number" class="form-control" name="repeticion[]" placeholder="Reps...">
-
-                                    <div class="ejercicios" id="inputsEjercicios">
-
-                                    </div>
-                                    <a class="btn btn-light" id="agregarEjercicio">Add exercise</a>
+                                <div class="ejercicios" id="inputsEjercicios">
                                 </div>
+                                <a class="btn btn-light" id="agregarEjercicio">Add exercise</a>
                                 <a class="btn btn-primary" id="crear_rutina">Create</a>
                             </form>
 
